--- a/Maybenogi/Server/Maybenogi.Server.csproj
+++ b/Maybenogi/Server/Maybenogi.Server.csproj
@@ -7,6 +7,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="91.0.4472.10100" />
+    <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.29.1" />
   </ItemGroup>
 
   <ItemGroup>
